--- a/Student Counter Website/css.css
+++ b/Student Counter Website/css.css
@@ -3,18 +3,25 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-image: url(bg.jpg);
+  background-size: cover;
+  background-position: center;
+  background-color: rgba(255, 255, 255, 0.9);
+        
   }
   
   header {
-    width: 100%;
+    width: 40%;
     text-align: center;
+    background-color: red;
   }
   
   main {
-    width: 60%;
+    width: 20%;
     margin-top: 50px;
     display: flex;
     flex-direction: column;
+    background-color: rgb(219, 219, 137);
     align-items: center;
   }
   
