--- a/Card Game/style.css
+++ b/Card Game/style.css
@@ -1,30 +1,61 @@
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 50px;
-  }
-  
-  .game {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 50px;
-  }
-  
-  button {
-    margin-top: 20px;
-    padding: 10px 20px;
-    background-color: #3f51b5;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  #message {
-    margin-top: 20px;
-    font-size: 20px;
-    font-weight: bold;
-  }
-  
+
+
+
+body {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', Arial, sans-serif;
+  background-image: url("/card.jpg");
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  font-weight: bold;
+  color: white;
+  text-align: center;
+  margin: 20px 0px;
+}
+
+h1 {
+  color: rgb(255, 255, 254);
+}
+
+#message-el {
+  font-style: italic;
+  text-align: center;
+
+}
+
+.heroBtn{
+  display: inline-block;
+  text-decoration: none;
+  color: black;
+  border: 1px solid white;
+  padding: 12px 34px;
+  font-size: 17px;
+  background: #8fbc8f;
+  position:relative ;
+  cursor: pointer;
+}
+.heroBtn:hover{
+  border: 1px solid #0b8793;
+  background: #0b8793;
+  transition: 1s;
+  color: black;
+}
+div.card{
+  display: inline-block;
+  height: 100px;
+  width:65px;
+  border: 1px solid black;
+  margin: 10px auto;
+  background-color: white;
+  border-radius: 5px;
+}
+
+.card-value{
+  color: black;
+  padding-top: 30px;
+  font-size: 30px;
+}
+
+div.inactive {
+  display: none;
+}
