--- a/Card Game/style.css
+++ b/Card Game/style.css
@@ -1,11 +1,11 @@
 body {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', Arial, sans-serif;
-  background-image: url("/card.jpg");
+  background-image: url("card.jpg");
   width: 100%;
   height: 100%;
   background-size: cover;
   font-weight: bold;
-  color: white;
+  color: rgb(228, 154, 154);
   text-align: center;
   margin: 20px 0px;
 }
